WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310711
[threaded-animations] navigating between apple.com and cnn.com back and forth yields a timeline lookup failure
https://bugs.webkit.org/show_bug.cgi?id=310711
Summary
[threaded-animations] navigating between apple.com and cnn.com back and forth...
Antoine Quint
Reported
2026-03-25 08:02:32 PDT
Steps to reproduce in STP 239: 1. load apple.com 2. in the same tab load cnn.com 3. press the back button 4. press the forward button At this point we fail to find a timeline under `RemoteLayerTreeNode::setAcceleratedEffectsAndBaseValues()` and crash.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-25 08:02:38 PDT
<
rdar://problem/173325751
>
Antoine Quint
Comment 2
2026-03-25 08:09:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61330
EWS
Comment 3
2026-03-26 01:53:18 PDT
Committed
309972@main
(f67bc569d1c1): <
https://commits.webkit.org/309972@main
> Reviewed commits have been landed. Closing PR #61330 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug